--- a/index.html
+++ b/index.html
@@ -1,2 +1,12 @@
+<html lang="en">
+<head>
+    <title>My Page</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
 <h1>JayaPrakash</h1>
-<h1>MERN Stack Developer</h1>
+<h3>MERN Stack Developer</h3>
+</body>
+</html>
