--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
 <body>
 <h1>JayaPrakash</h1>
 <h3>MERN Stack Developer</h3>
+<hr>
+<p>My Projects</p>
+<ol>
+    <li><a href="https://jay-7374.github.io/portfolio/">Portfolio</a></li>
+</ol>
 </body>
 </html>
