Rearranged content structure in index.html to improve layout

--- a/index.html
+++ b/index.html
@@ -9,10 +9,15 @@
 <body>
 <h1>JayaPrakash</h1>
 <h3>MERN Stack Developer</h3>
-<hr>
+<br>
 <p>My Projects</p>
 <ol>
     <li><a href="https://jay-7374.github.io/portfolio/">Portfolio</a></li>
+</ol>
+<hr>
+<p>Assignments</p>
+<ol>
+    <li><a href="#">Assignments</a></li>
 </ol>
 </body>
 </html>
