--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 <br>
 <p>My Projects</p>
 <ol>
-    <li><a href="https://jay-7374.github.io/portfolio/">Portfolio</a></li>
+    <li><a href="p1">Portfolio</a></li>
 </ol>
 <hr>
 <p>Assignments</p>
 <ol>
-    <li><a href="#">Assignments</a></li>
+    <li><a href="a1">Assignments</a></li>
 </ol>
 </body>
 </html>
