--- a/a1/index.html
+++ b/a1/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Assignment 1</h1>
-    <h3>Essay on MERN Stack</h3>
+    <h3>Essay on <abbr title="MongoDB, Expressjs, Reactjs and Nodejs">MERN Stack</abbr></h3>
     <p> The <mark>MERN stack</mark> is a popular collection of technologies used to build modern <u>web applications</u>. The acronym MERN stands for <i>MongoDB, Expressjs, Reactjs and Nodejs</i> .</p>
     <p>This stack is widely appreciated for its efficiency.</p>
 </body>
