--- a/a4/index.html
+++ b/a4/index.html
@@ -15,7 +15,7 @@
     <label>Date of birth</label><br>
     <select name="day" required>
       <option value="">Day</option>
-      <option value="J1">1</option>
+      <option value="1">1</option>
       <option value="2">2</option>
       <option value="3">3</option>
       <option value="4">4</option>
