--- a/p1/index.html
+++ b/p1/index.html
@@ -9,8 +9,8 @@
   <body>
     <div class="container">
       <header>
-        <div><h1>Jaya Prakash</h1></div>
-        <div>
+        <h1>Jaya Prakash</h1>
+        <nav>
           <ul>
             <li><a href="#home">Home</a></li>
             <li><a href="#projects">Projects</a></li>
@@ -18,10 +18,23 @@
             <li><a href="#about">About</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
-        </div>
+        </nav>
       </header>
 
-      <main></main>
+      <main>
+        <section id="home">
+                    <div class="row">
+                        <div class="box">
+                            <h1 class="title">MERN Stack Developer</h1><br>
+                            <p id="para">Enthusiastic MERN Stack Developer committed to crafting dynamic full-stack web applications using the power of MongoDB, Express, React, and Node.js. With a passion for innovative solutions and user-centered design, I thrive on transforming ideas into seamless digital experiences.</p><br>
+                            <button>Know More</button>
+                        </div>
+                        <div class="box">
+                            <img src="goku.png" alt="goku img" width="300" height="200">
+                        </div>
+                    </div>
+            </section>
+      </main>
 
       <footer></footer>
     </div>
