--- a/p1/index.html
+++ b/p1/index.html
@@ -34,6 +34,65 @@
                         </div>
                     </div>
             </section>
+
+              <section id="projects">
+  <h2 class="projects-heading">Projects</h2>
+  <div class="projects-container">
+    <div class="project-card">
+      <h3>Project 1</h3>
+      <p>Description of project 1.</p>
+      <button class="demo-button">View Demo</button>
+    </div>
+    <div class="project-card">
+      <h3>Project 2</h3>
+      <p>Description of project 2.</p>
+      <button class="demo-button">View Demo</button>
+    </div>
+    <div class="project-card">
+      <h3>Project 3</h3>
+      <p>Description of project 3.</p>
+      <button class="demo-button">View Demo</button>
+    </div>
+  </div>
+</section>
+
+
+            <section id="services">
+    <h2 class="section-heading">Services</h2>
+    <div class="services-container">
+        <div class="service-card">
+            <h3>Web Development</h3>
+            <p>Build responsive and dynamic websites using the MERN stack.</p>
+        </div>
+        <div class="service-card">
+            <h3>API Integration</h3>
+            <p>Seamlessly integrate third-party APIs for enhanced functionality.</p>
+        </div>
+        <div class="service-card">
+            <h3>UI/UX Design</h3>
+            <p>Create intuitive user interfaces and engaging experiences.</p>
+        </div>
+    </div>
+</section>
+<section id="about">
+    <h2 class="section-heading">About Me</h2>
+    <div class="about-container">
+        <p>My name is JayaPrakash, and I am a committed MERN Stack Developer specializing in the development of clean and effective web solutions. I take great pride in creating user-friendly applications and actively seek opportunities to expand my knowledge of emerging technologies.</p>
+    </div>
+</section>
+<section id="contact">
+    <h2 class="section-heading">Contact</h2>
+    <div class="contact-container">
+    <div class="contact-form">
+        <div class="contact-details">
+            <p>Name: Jaya Prakash</p>
+            <p>Email ID: user421050@gmail.com</p>
+            <p>Ph. No: 9949777279</p>
+        </div>
+        <button type="submit">Send Message</button>
+    </div>
+</div>
+</section>
       </main>
 
       <footer></footer>
