Refactor code structure for improved readability and maintainability

--- a/p1/index.html
+++ b/p1/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   </head>
   <body>
     <div class="container">
@@ -22,77 +23,119 @@
       </header>
 
       <main>
-        <section id="home">
-                    <div class="row">
-                        <div class="box">
-                            <h1 class="title">MERN Stack Developer</h1><br>
-                            <p id="para">Enthusiastic MERN Stack Developer committed to crafting dynamic full-stack web applications using the power of MongoDB, Express, React, and Node.js. With a passion for innovative solutions and user-centered design, I thrive on transforming ideas into seamless digital experiences.</p><br>
-                            <button>Know More</button>
-                        </div>
-                        <div class="box">
-                            <img src="goku.png" alt="goku img" width="300" height="200">
-                        </div>
-                    </div>
-            </section>
-
-              <section id="projects">
-  <h2 class="projects-heading">Projects</h2>
-  <div class="projects-container">
-    <div class="project-card">
-      <h3>Project 1</h3>
-      <p>Description of project 1.</p>
-      <button class="demo-button">View Demo</button>
+       <section id="home">
+    <div class="row">
+        <div class="box">
+            <h1 class="title">MERN Stack Developer</h1><br>
+            <p id="para">
+                As a dedicated MERN Stack Developer, I specialize in crafting seamless full-stack web applications 
+                using MongoDB, Express.js, React, and Node.js. My passion lies in developing innovative, user-centric 
+                solutions that drive efficiency and enhance digital experiences. With a strong foundation in 
+                responsive design, optimized performance, and dynamic UI interactions, I transform ideas into 
+                powerful, scalable applications.
+            </p><br>
+            <button>Know More</button>
+        </div>
+        <div class="box">
+            <img src="goku.png" alt="Developer Profile">
+        </div>
     </div>
-    <div class="project-card">
-      <h3>Project 2</h3>
-      <p>Description of project 2.</p>
-      <button class="demo-button">View Demo</button>
-    </div>
-    <div class="project-card">
-      <h3>Project 3</h3>
-      <p>Description of project 3.</p>
-      <button class="demo-button">View Demo</button>
-    </div>
-  </div>
 </section>
 
 
-            <section id="services">
+ <section id="projects">
+    <h2 class="projects-heading">Projects</h2>
+    <div class="projects-container">
+        <div class="project-card">
+            <h3>Project-1</h3>
+            <img src="path/to/project1-image.jpg" alt="Project 1 Preview" class="project-image">
+            <p>Description of project 1.</p>
+            <button class="demo-button" onclick="window.location.href='#'">View Demo</button>
+            <button class="code-button" onclick="window.location.href='#'">View Code</button>
+        </div>
+
+        <div class="project-card">
+            <h3>Project-2</h3>
+            <img src="path/to/project2-image.jpg" alt="Poject-2 Preview" class="project-image">
+            <p>Description of project 2.</p>
+            <button class="demo-button" onclick="window.location.href='#'">View Demo</button>
+            <button class="code-button" onclick="window.location.href='#'">View Code</button>
+        </div>
+
+        <div class="project-card">
+            <h3>Project-3</h3>
+            <img src="path/to/project3-image.jpg" alt="Project-3 Preview" class="project-image">
+            <p>Description of project 3.</p>
+            <button class="demo-button" onclick="window.location.href='#'">View Demo</button>
+            <button class="code-button" onclick="window.location.href='#'">View Code</button>
+        </div>
+    </div>
+</section>
+
+
+  <section id="services">
     <h2 class="section-heading">Services</h2>
     <div class="services-container">
         <div class="service-card">
-            <h3>Web Development</h3>
-            <p>Build responsive and dynamic websites using the MERN stack.</p>
+          <img src="coding.png" alt="Frontend Icon" class="service-icon">
+            <h3>Full-Stack Web Development</h3>
+            <p>Bringing ideas to life with dynamic, scalable full-stack solutions powered by the MERN stack.</p>
         </div>
         <div class="service-card">
-            <h3>API Integration</h3>
-            <p>Seamlessly integrate third-party APIs for enhanced functionality.</p>
+          <img src="programming.png" alt="Frontend Icon" class="service-icon">
+            <h3>Frontend Engineering</h3>
+            <p>Crafting seamless, responsive user interfaces using React.js, HTML5, CSS3, and modern JavaScript frameworks.</p>
         </div>
         <div class="service-card">
-            <h3>UI/UX Design</h3>
-            <p>Create intuitive user interfaces and engaging experiences.</p>
+          <img src="backend.png" alt="Frontend Icon" class="service-icon">
+            <h3>Backend Architecture</h3>
+            <p>Designing robust APIs and server-side logic with Node.js & Express.js, ensuring efficient data handling and security.</p>
         </div>
     </div>
 </section>
+
+
+
 <section id="about">
-    <h2 class="section-heading">About Me</h2>
     <div class="about-container">
-        <p>My name is JayaPrakash, and I am a committed MERN Stack Developer specializing in the development of clean and effective web solutions. I take great pride in creating user-friendly applications and actively seek opportunities to expand my knowledge of emerging technologies.</p>
+        <img src="jp.jpg" alt="Profile Picture" class="profile-img">
+        <h2>About Me</h2>
+        <p>
+            My name is JayaPrakash, a passionate MERN Stack Developer specializing in crafting seamless, user-friendly web applications.
+            I thrive on learning new technologies and pushing the boundaries of development to create impactful solutions.
+        </p>
+        <div class="tech-icons">
+            <img src="science.png" alt="React">
+            <img src="nodejs.png" alt="Node.js">
+            <img src="mongodb.png" alt="MongoDB">
+            <img src="expressjs.png" alt="Express.js">
+        </div>
     </div>
 </section>
+
 <section id="contact">
     <h2 class="section-heading">Contact</h2>
     <div class="contact-container">
-    <div class="contact-form">
-        <div class="contact-details">
-            <p>Name: Jaya Prakash</p>
-            <p>Email ID: user421050@gmail.com</p>
-            <p>Ph. No: 9949777279</p>
+        <div class="contact-form">
+            <div class="contact-details">
+                <p><i class="fas fa-user"></i> Name: V. Jaya Prakash</p>
+                <p><i class="fas fa-envelope"></i> Email: user421050@gmail.com</p>
+                <p><i class="fas fa-phone"></i> Phone: 9949777279</p>
+            </div>
+            <button type="submit">Send Message</button>
+            <div class="social-links"> 
+                <a href="https://www.linkedin.com/in/jayaprakash-v-0a20682a2?" target="_blank">
+                    <i class="fab fa-linkedin"></i>
+                </a>
+                <a href="https://github.com/Jay-7374" target="_blank">
+                    <i class="fab fa-github"></i>
+                </a>
+            </div>
         </div>
-        <button type="submit">Send Message</button>
     </div>
-</div>
 </section>
+
+
       </main>
 
       <footer></footer>
