Add footer with copyright notice and style updates for improved appearance

--- a/p1/index.html
+++ b/p1/index.html
@@ -160,7 +160,10 @@
 
       </main>
 
-      <footer></footer>
+      <footer>
+    <p>© 2025 Jaya Prakash. All Rights Reserved.</p>
+</footer>
+
     </div>
   </body>
 </html>
