--- a/p1/index.html
+++ b/p1/index.html
@@ -142,8 +142,17 @@
                 <p><i class="fas fa-envelope"></i> Email: user421050@gmail.com</p>
                 <p><i class="fas fa-phone"></i> Phone: 9949777289</p>
             </div>
-            <a href="mailto:user421050@gmail.com" target="_blank">
-    <button type="button">Send Message</button>
+            <form class="contact-inputs">
+    <input type="text" placeholder="Your Name" required>
+    <input type="email" placeholder="Your Email" required>
+    <textarea placeholder="Message" rows="4"></textarea>
+    <div class="button-container">
+        <button type="submit">Send Message</button>
+        <a href="mailto:user421050@gmail.com" target="_blank">
+            <button type="button">Email Me!</button>
+        </a>
+    </div>
+</form>
 </a>
             <div class="social-links"> 
                 <a href="https://www.linkedin.com/in/jayaprakash-v-0a20682a2?" target="_blank">
