--- a/p1/index.html
+++ b/p1/index.html
@@ -57,7 +57,7 @@
     </div>
         </div>
         <div class="box">
-            <img src="goku.png" alt="Developer Profile">
+            <img src="images/goku.png" alt="Developer Profile">
         </div>
     </div>
 </section>
@@ -67,11 +67,11 @@
     <h2 class="projects-heading">Projects</h2>
     <div class="projects-container">
         <div class="project-card">
-            <h3>Project-1</h3>
+            <h3>Food-Mart</h3>
             <img src="path/to/project1-image.jpg" alt="Project 1 Preview" class="project-image">
             <p>Description of project 1.</p>
-            <button class="demo-button" onclick="window.location.href='#'">View Demo</button>
-            <button class="code-button" onclick="window.location.href='#'">View Code</button>
+            <button class="demo-button" onclick="window.location.href='/food-mart/index.html'">View Demo</button>
+            <button class="code-button" onclick="window.location.href='https://github.com/Jay-7374/Jay-7374.github.io/tree/77cd67bed57e35730de143915ffff025c4538ed9/food-mart'">View Code</button>
         </div>
 
         <div class="project-card">
@@ -97,17 +97,17 @@
     <h2 class="section-heading">Services</h2>
     <div class="services-container">
         <div class="service-card">
-          <img src="coding.png" alt="Frontend Icon" class="service-icon">
+          <img src="images/coding.png" alt="Frontend Icon" class="service-icon">
             <h3>Full-Stack Web Development</h3>
             <p>Bringing ideas to life with dynamic, scalable full-stack solutions powered by the MERN stack.</p>
         </div>
         <div class="service-card">
-          <img src="programming.png" alt="Frontend Icon" class="service-icon">
+          <img src="images/programming.png" alt="Frontend Icon" class="service-icon">
             <h3>Frontend Engineering</h3>
             <p>Crafting seamless, responsive user interfaces using React.js, HTML5, CSS3, and modern JavaScript frameworks.</p>
         </div>
         <div class="service-card">
-          <img src="backend.png" alt="Frontend Icon" class="service-icon">
+          <img src="images/backend.png" alt="Frontend Icon" class="service-icon">
             <h3>Backend Architecture</h3>
             <p>Designing robust APIs and server-side logic with Node.js & Express.js, ensuring efficient data handling and security.</p>
         </div>
@@ -118,17 +118,17 @@
 
 <section id="about">
     <div class="about-container">
-        <img src="jp.jpg" alt="Profile Picture" class="profile-img">
+        <img src="images/jp.jpg" alt="Profile Picture" class="profile-img">
         <h2>About Me</h2>
         <p>
             My name is JayaPrakash, a passionate MERN Stack Developer specializing in crafting seamless, user-friendly web applications.
             I thrive on learning new technologies and pushing the boundaries of development to create impactful solutions.
         </p>
         <div class="tech-icons">
-            <img src="science.png" alt="React">
-            <img src="nodejs.png" alt="Node.js">
-            <img src="mongodb.png" alt="MongoDB">
-            <img src="expressjs.png" alt="Express.js">
+            <img src="images/science.png" alt="React">
+            <img src="images/nodejs.png" alt="Node.js">
+            <img src="images/mongodb.png" alt="MongoDB">
+            <img src="images/expressjs.png" alt="Express.js">
         </div>
     </div>
 </section>
