--- a/food-mart/index.html
+++ b/food-mart/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FoodMart</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <header>
@@ -51,6 +53,61 @@
     </nav>
 </header>
 
+
+<main>
+    <div class="secondary-nav">
+    <select>
+        <option>Shop by Department</option>
+        <option>Fruits</option>
+        <option>Vegetables</option>
+        <option>Dairy</option>
+        <option>Snacks</option>
+        <option>Bakery</option>
+    </select>
+
+    <ul>
+        <li><a href="#">Women</a></li>
+        <li><a href="#">Men</a></li>
+        <li><a href="#">Kids</a></li>
+        <li><a href="#">Accessories</a></li>
+        <li><a href="#">Pages</a></li>
+        <li><a href="#">Brand</a></li>
+        <li><a href="#">Sale</a></li>
+        <li><a href="#">Blog</a></li>
+    </ul>
+</div>
+
+<section class="promotions">
+    <div class="promo-item large smoothie">
+        <div class="promo-content">
+            <p>100% Natural</p>
+            <h2><strong>Fresh Smoothie & Summer Juice</strong></h2>
+            <button>SHOP NOW</button>
+        </div>
+    </div>
+
+    <div class="promo-side">
+    <div class="promo-item small veggies">
+        <p>20% Off</p>
+        <p><span class="separator"></span> <span class="sale-text">sale</span></p>
+        <h2> Fruits & Vegetables</h2>
+        <p>Shop Collection →</p>
+    </div>
+    <div class="promo-item small baked">
+        <p>15% Off </p>
+        <p><span class="separator"></span> <span class="sale-text">sale</span></p>
+        <h2> Baked Products</h2>
+        <p>Shop Collection →</p>
+    </div>
+</div>
+
+</section>
+
+
+
+
+
+</main>
 
     <footer>
     </footer>
