Refactor code structure for improved readability and maintainability

--- a/p1/index.html
+++ b/p1/index.html
@@ -68,10 +68,10 @@
     <div class="projects-container">
         <div class="project-card">
             <h3>Food-Mart</h3>
-            <img src="path/to/project1-image.jpg" alt="Project 1 Preview" class="project-image">
-            <p>Description of project 1.</p>
+            <img src="images/demo1.png" alt="Project 1 Preview" class="project-image">
+            <p>The Food Mart is a grocery store with fresh produce, packaged goods, and household essentials, designed for easy daily shopping.</p>
             <button class="demo-button" onclick="window.location.href='/food-mart/index.html'">View Demo</button>
-            <button class="code-button" onclick="window.location.href='https://github.com/Jay-7374/Jay-7374.github.io/tree/77cd67bed57e35730de143915ffff025c4538ed9/food-mart'">View Code</button>
+            <button class="code-button" onclick="window.location.href='https://github.com/Jay-7374/Jay-7374.github.io/tree/deb34463bb7804e5fabebf80590d577d670b7d34/food-mart'">View Code</button>
         </div>
 
         <div class="project-card">
