Refactor code structure for improved readability and maintainability

--- a/food-mart/index.html
+++ b/food-mart/index.html
@@ -81,7 +81,7 @@
     <div class="promo-item large smoothie">
         <div class="promo-content">
             <p>100% Natural</p>
-            <h2><strong>Fresh Smoothie & Summer Juice</strong></h2>
+            <h2 style="font-size: 36px !important;"><strong>Fresh Smoothie & Summer Juice</strong></h2>
             <button>SHOP NOW</button>
         </div>
     </div>
@@ -103,6 +103,79 @@
 
 </section>
 
+<section class="shop-by-type">
+    <div class="type-header">
+        <h3>Category</h3>
+        <div class="right-controls">
+            <h3 class="view-all">View All Categories</h3>
+            <div class="type-nav">
+                <img src="images/chevron.png" alt="Previous" class="nav-arrow left">
+                <img src="images/next.png" alt="Next" class="nav-arrow right">
+            </div>
+        </div>
+    </div>
+
+    <div class="type-container">
+        <div class="type-item fruits">
+            <img src="images/icon-vegetables-broccoli.png" alt="Fruits & Vegetables">
+            <h2>Fruits & Vegetables</h2>
+        </div>
+        <div class="type-item bakery">
+            <img src="images/icon-bread-baguette.png" alt="Breads & Sweets">
+            <h2>Breads & Sweets</h2>
+        </div>
+        <div class="type-item drinks">
+            <img src="images/icon-soft-drinks-bottle.png" alt="Soft Drinks">
+            <h2>Soft Drinks</h2>
+        </div>
+        <div class="type-item alcohol">
+            <img src="images/icon-wine-glass-bottle.png" alt="Wine & Whiskey">
+            <h2>Wine & Whiskey</h2>
+        </div>
+        <div class="type-item meat">
+            <img src="images/icon-animal-products-drumsticks.png" alt="Meat">
+            <h2>Meat</h2>
+        </div>
+        <div class="type-item supplements">
+            <img src="images/icon-bread-herb-flour.png" alt="Medicine & Supplements">
+            <h2>Medicine & Supplements</h2>
+        </div>
+    </div>
+</section>
+
+<section class="new-brands">
+    <div class="brands-header">
+        <h3>Newly Arrived Brands</h3>
+        <div class="right-controls">
+            <h3 class="view-all">View All Brands</h3>
+            <div class="brand-nav">
+                <img src="images/chevron.png" alt="Previous" class="nav-arrow left">
+                <img src="images/next.png" alt="Next" class="nav-arrow right">
+            </div>
+        </div>
+    </div>
+
+    <div class="brands-container">
+        <div class="brand-item">
+            <img src="images/honey.jpg" alt="Amber Jar Honey">
+            <h2>Amber Jar Honey</h2>
+            <p>Best nectar you wish to get</p>
+        </div>
+        <div class="brand-item">
+            <img src="images/herbs.jpg" alt="Herbs">
+            <h2>Fresh Aromatic Herbs</h2> <p>Handpicked for superior quality.</p>
+        </div>
+        <div class="brand-item">
+            <img src="images/tuna.jpg" alt="tuna">
+            <h2>Premium Tuna Container</h2> <p>Fresh, high-quality tuna. </p>
+        </div>
+        <div class="brand-item">
+            <img src="images/junk.jpg" alt="hotz food">
+            <h2>HOTZ Food</h2> 
+            <p>flavors of traditional Polish cuisine</p>
+        </div>
+    </div>
+</section>
 
 
 
