Refactor code structure for improved readability and maintainability

--- a/food-mart/index.html
+++ b/food-mart/index.html
@@ -178,6 +178,93 @@
 </section>
 
 
+<section class="new-products">
+    <div class="products-header">
+        <h3>Trending Products</h3>
+        <div class="filter-options">
+            <span class="filter-text">All</span>
+            <span class="filter-text">Fruits & Veggies</span>
+            <span class="filter-text">Juices</span>
+        </div>
+    </div>
+
+    <section class="new-products">
+    <div class="products-container">
+        <div class="product-card">
+            <img src="images/thumb-avocado.png" alt="Avocado">
+            <h2>Avocado</h2>
+            <p>250g ⭐4.5</p>
+            <p><b>₹50</b></p>
+            <img src="images/wishlist.png" alt="Like" class="like-icon">
+        </div>
+        <div class="product-card">
+            <img src="images/thumb-bananas.png" alt="Banana">
+            <h2>Banana</h2>
+            <p>1kg ⭐4.2</p>
+            <p><b>₹30</b></p>
+            <img src="images/wishlist.png" alt="Like" class="like-icon">
+        </div>
+        <div class="product-card">
+            <img src="images/thumb-biscuits.png" alt="Biscuits">
+            <h2>Biscuits</h2>
+            <p>200g ⭐4.0</p>
+            <p><b>₹25</b></p>
+            <img src="images/wishlist.png" alt="Like" class="like-icon">
+        </div>
+        <div class="product-card">
+            <img src="images/thumb-coke.png" alt="Coke">
+            <h2>Coke</h2>
+            <p>500ml ⭐4.3</p>
+            <p><b>₹40</b></p>
+            <img src="images/wishlist.png" alt="Like" class="like-icon">
+        </div>
+        <div class="product-card">
+            <img src="images/thumb-cucumber.png" alt="Cucumber">
+            <h2>Cucumber</h2>
+            <p>500g ⭐4.1</p>
+            <p><b>₹15</b></p>
+            <img src="images/wishlist.png" alt="Like" class="like-icon">
+        </div>
+        <div class="product-card">
+            <img src="images/thumb-eggs.png" alt="Eggs">
+            <h2>Eggs</h2>
+            <p>12pcs ⭐4.6</p>
+            <p><b>₹60</b></p>
+            <img src="images/wishlist.png" alt="Like" class="like-icon">
+        </div>
+        <div class="product-card">
+            <img src="images/thumb-lays.png" alt="Lays">
+            <h2>Lays</h2>
+            <p>100g ⭐4.4</p>
+            <p><b>₹20</b></p>
+            <img src="images/wishlist.png" alt="Like" class="like-icon">
+        </div>
+        <div class="product-card">
+            <img src="images/thumb-milk.png" alt="Milk">
+            <h2>Milk</h2>
+            <p>1L ⭐4.5</p>
+            <p><b>₹50</b></p>
+            <img src="images/wishlist.png" alt="Like" class="like-icon">
+        </div>
+        <div class="product-card">
+            <img src="images/thumb-raspberries.png" alt="Raspberries">
+            <h2>Raspberries</h2>
+            <p>200g ⭐4.7</p>
+            <p><b>₹70</b></p>
+            <img src="images/wishlist.png" alt="Like" class="like-icon">
+        </div>
+        <div class="product-card">
+            <img src="images/thumb-tomatoketchup.png" alt="Tomato Ketchup">
+            <h2>Tomato Ketchup</h2>
+            <p>500g ⭐4.3</p>
+            <p><b>₹35</b></p>
+            <img src="images/wishlist.png" alt="Like" class="like-icon">
+        </div>
+    </div>
+</section>
+
+</section>
+
 
 
 </main>
