Refactor code structure for improved readability and maintainability

--- a/food-mart/index.html
+++ b/food-mart/index.html
@@ -265,6 +265,68 @@
 
 </section>
 
+<section class="info-section">
+    <div class="top-row">
+        <div class="branding">
+            <img src="images/logo.png" alt="Foodmart Grocery Store">
+            <div class="social-icons">
+                <img src="images/facebook.png" alt="Facebook">
+                <img src="images/instagram.avif" alt="Instagram">
+                <img src="images/twitterx.png" alt="Twitter">
+                <img src="images/youtube.png" alt="YouTube">
+            </div>
+        </div>
+    </div>
+
+    <div class="middle-row">
+        <div class="info-columns">
+            <div class="column">
+                <h3>Ultras</h3>
+                <ul>
+                    <li>About Us</li>
+                    <li>Conditions</li>
+                    <li>Our Journals</li>
+                    <li>Careers</li>
+                    <li>Affiliate Programme</li>
+                    <li>Ultras Press</li>
+                </ul>
+            </div>
+
+            <div class="column">
+                <h3>Customer Service</h3>
+                <ul>
+                    <li>FAQ</li>
+                    <li>Contact</li>
+                    <li>Privacy Policy</li>
+                    <li>Returns & Refunds</li>
+                    <li>Cookie Guidelines</li>
+                    <li>Delivery Information</li>
+                </ul>
+            </div>
+
+            <div class="column">
+                <h3>Available in</h3>
+                <ul>
+                    <li>Delhi</li>
+                    <li>Maharashtra</li>
+                    <li>Karnataka</li>
+                    <li>Tamil Nadu</li>
+                    <li>West Bengal</li>
+                    <li>Gujarat</li>
+                    <li>Uttar Pradesh</li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="subscribe">
+            <input type="email" placeholder="Enter your email">
+            <button>Subscribe</button>
+        </div>
+    </div>
+</section>
+
+
+
 
 
 </main>
