--- a/p1/index.html
+++ b/p1/index.html
@@ -25,7 +25,7 @@
       <main>
        <section id="home">
     <div class="row">
-        <div class="box">
+        <div class="box1">
             <h1 class="title">MERN Stack Developer</h1><br>
             <p id="para">
                 As a dedicated MERN Stack Developer, I specialize in crafting seamless full-stack web applications 
@@ -56,7 +56,7 @@
         <button class="show-less-btn" onclick="window.location='#'">Show Less</button>
     </div>
         </div>
-        <div class="box">
+        <div class="box2">
             <img src="images/goku.png" alt="Developer Profile">
         </div>
     </div>
