Add fruit management features: implement dynamic rendering, deletion, and styling for fruit cards

--- a/p1/index.html
+++ b/p1/index.html
@@ -71,7 +71,10 @@
             <img src="images/demo1.png" alt="Project 1 Preview" class="project-image">
             <p>The Food Mart is a grocery store with fresh produce, packaged goods, and household essentials, designed for easy daily shopping.</p>
             <button class="demo-button" onclick="window.location.href='/food-mart/index.html'">View Demo</button>
-            <button class="code-button" onclick="window.location.href='https://github.com/Jay-7374/Jay-7374.github.io/tree/main/food-mart'">View Code</button>
+            <a href="https://github.com/Jay-7374/Jay-7374.github.io/tree/main/food-mart" target="_blank">
+  <button class="code-button">View Code</button>
+</a>
+
         </div>
 
         <div class="project-card">
