--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
     <li><a href="a14">Assignment-14</a></li>
     <li><a href="a15">Assignment-15</a></li>
     <li><a href="a16">Assignment-16</a></li>
+    <li><a href="a17">Assignment-17</a></li>
+    <li><a href="a18">Assignment-18</a></li>
 </ol>
 </body>
 </html>
