Refactor code structure for improved readability and maintainability

--- a/p1/index.html
+++ b/p1/index.html
@@ -78,19 +78,21 @@
         </div>
 
         <div class="project-card">
-            <h3>Project-2</h3>
-            <img src="path/to/project2-image.jpg" alt="Poject-2 Preview" class="project-image">
-            <p>Description of project 2.</p>
-            <button class="demo-button" onclick="window.location.href='#'">View Demo</button>
-            <button class="code-button" onclick="window.location.href='#'">View Code</button>
+            <h3>Online-Store</h3>
+            <img src="images/demo2.png" alt="Poject-2 Preview" class="project-image">
+            <p>My Store is a simple online store web page that allows users to browse products and view their shopping cart.</p>
+            <button class="demo-button" onclick="window.location.href='/My Store/index.html'">View Demo</button>
+            <a href="https://github.com/Jay-7374/Jay-7374.github.io/tree/main/My_Store" target="_blank">
+  <button class="code-button">View Code</button></a>
         </div>
 
         <div class="project-card">
-            <h3>Project-3</h3>
-            <img src="path/to/project3-image.jpg" alt="Project-3 Preview" class="project-image">
-            <p>Description of project 3.</p>
-            <button class="demo-button" onclick="window.location.href='#'">View Demo</button>
-            <button class="code-button" onclick="window.location.href='#'">View Code</button>
+            <h3>ATM</h3>
+            <img src="images/demo3.png" alt="Project-3 Preview" class="project-image">
+            <p>Bank-ATM is a web page that simulates an ATM interface to provide an interactive and realistic ATM experience.</p>
+            <button class="demo-button" onclick="window.location.href='/Bank-ATM/index.html'">View Demo</button>
+            <a href="https://github.com/Jay-7374/Jay-7374.github.io/tree/main/Bank-ATM" target="_blank">
+  <button class="code-button">View Code</button></a>
         </div>
     </div>
 </section>
