Fix demo button link to point to the correct project directory

--- a/p1/index.html
+++ b/p1/index.html
@@ -81,7 +81,7 @@
             <h3>Online-Store</h3>
             <img src="images/demo2.png" alt="Poject-2 Preview" class="project-image">
             <p>My Store is a simple online store web page that allows users to browse products and view their shopping cart.</p>
-            <button class="demo-button" onclick="window.location.href='/My Store/index.html'">View Demo</button>
+            <button class="demo-button" onclick="window.location.href='/My_Store/index.html'">View Demo</button>
             <a href="https://github.com/Jay-7374/Jay-7374.github.io/tree/main/My_Store" target="_blank">
   <button class="code-button">View Code</button></a>
         </div>
