Implement transaction handling and user balance display in ATM application

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <li><a href="a20">Assignment-20</a></li>
     <li><a href="a21">Assignment-21</a></li>
     <li><a href="a22">Assignment-22</a></li>
+    <li><a href="a23">Assignment-23</a></li>
 </ol>
 </body>
 </html>
