--- a/p1/index.html
+++ b/p1/index.html
@@ -144,8 +144,8 @@
         <div class="contact-form">
             <div class="contact-details">
                 <p><i class="fas fa-user"></i> Name: V. Jaya Prakash</p>
-                <p><i class="fas fa-envelope"></i> Email: user421050@gmail.com</p>
-                <p><i class="fas fa-phone"></i> Phone: 9949777289</p>
+                <p><i class="fas fa-envelope"></i> Email: xyz@gmail.com</p>
+                <p><i class="fas fa-phone"></i> Phone: 9949122401</p>
             </div>
             <form class="contact-inputs">
     <input type="text" placeholder="Your Name" required>
