--- a/a23/index.html
+++ b/a23/index.html
@@ -1,57 +1,141 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
-      crossorigin="anonymous"
-    />
-  </head>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>MERN Stack Portfolio</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet">
+</head>
+<body>
 
-  <body>
-     <div class="row bg-warning p-5">
-        <div class="col-lg-6">
-          <h1 class="text-Danger">MERN Stack Developer</h1>
-          <p class="text-Success">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi
-            earum, fuga ipsum qui maiores rem, a eligendi minus quam cumque
-            ratione ipsam optio illo sunt deleniti! Mollitia, temporibus minus!
-            Molestiae.
-          </p>
-          <button class="btn btn-lg btn-outline-info">View More</button>
-        </div>
-        <div class="col-lg-6">
-          <img src="https://picsum.photos/id/20/300/300" />
-        </div>
-      </div>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
-        <a class="nav-link"  href="#">Home</a>
-        <a class="nav-link" href="#">Project</a>
-        <a class="nav-link" href="#">Services</a>
-         <a class="nav-link" href="#">About</a>
-          <a class="nav-link" href="#">Contact</a>
-       
+
+  <nav class="navbar navbar-expand-lg navbar-dark bg-success sticky-top">
+    <div class="container">
+      <a class="navbar-brand fw-bold" href="#">MERN Developer</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navMenu">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
+          <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
+          <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+          <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+        </ul>
       </div>
     </div>
-  </div>
-</nav>
+  </nav>
 
-<script>
-     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
-      crossorigin="anonymous"
-</script>
 
-  </body>
-  </html>
+  <section id="home" class="py-5 bg-warning text-center">
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-md-6">
+          <h1 class="fw-bold text-dark">MERN Stack Developer</h1>
+          <p class="lead">Building modern, scalable web applications with MongoDB, Express.js, React, and Node.js.</p>
+          <a href="#about" class="btn btn-lg btn-outline-dark">Know More</a>
+        </div>
+        <div class="col-md-6">
+          <img src="https://picsum.photos/id/177/400/250" alt="MERN Developer" class="img-fluid rounded">
+        </div>
+      </div>
+    </div>
+</section>
+
+
+  <section id="projects" class="py-5">
+    <div class="container">
+      <h2 class="text-center mb-4 text-success">Projects</h2>
+      <div class="row g-4">
+        <div class="col-md-4">
+          <div class="card shadow bg-secondary text-white">
+            <div class="card-body text-center">
+              <h5 class="card-title">Food-Mart</h5>
+              <p class="card-text">A dynamic food mart web application.</p>
+              <a href="#" class="btn btn-warning">View Demo</a>
+              <a href="#" class="btn btn-dark">View Code</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card shadow bg-secondary text-white">
+            <div class="card-body text-center">
+              <h5 class="card-title">Online Store</h5>
+              <p class="card-text">An online store featuring a shopping system.</p>
+              <a href="#" class="btn btn-warning">View Demo</a>
+              <a href="#" class="btn btn-dark">View Code</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card shadow bg-secondary text-white">
+            <div class="card-body text-center">
+              <h5 class="card-title">Bank ATM</h5>
+              <p class="card-text">An ATM simulator for banking transactions.</p>
+              <a href="#" class="btn btn-warning">View Demo</a>
+              <a href="#" class="btn btn-dark">View Code</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+  <section id="services" class="py-5 bg-warning">
+    <div class="container text-center">
+      <h2 class="text-dark">Services</h2>
+      <div class="row">
+        <div class="col-md-4">
+          <div class="card p-4 shadow bg-secondary text-white">
+            <h5>Full-Stack Development</h5>
+            <p>Creating dynamic and scalable solutions using the MERN stack.</p>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card p-4 shadow bg-secondary text-white">
+            <h5>Frontend Engineering</h5>
+            <p>Building responsive UI with React.js, HTML, CSS, and JavaScript.</p>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card p-4 shadow bg-secondary text-white">
+            <h5>Backend Architecture</h5>
+            <p>Developing secure APIs and server-side logic with Node.js & Express.js.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+  <section id="about" class="py-5 bg-light">
+    <div class="container text-center">
+      <h2 class="text-success">About Me</h2>
+      <p>A passionate MERN Stack Developer with expertise in web applications.</p>
+      <div class="list-group">
+        <div class="list-group-item">Front-end: HTML, CSS, JavaScript, React.js</div>
+        <div class="list-group-item">Back-end: Node.js, Express.js, MongoDB</div>
+      </div>
+    </div>
+  </section>
+
+
+  <section id="contact" class="py-5">
+    <div class="container text-center">
+      <h2 class="text-success">Contact</h2>
+      <p><strong>Email:</strong> example@email.com</p>
+      <p><strong>Phone:</strong> +91 9876543210</p>
+      <p><strong>LinkedIn:</strong> <a href="#">linkedin.com/in/profile</a></p>
+      <p><strong>GitHub:</strong> <a href="#">github.com/username</a></p>
+    </div>
+  </section>
+
+  <footer class="bg-success text-center text-white py-3">
+    &copy; 2025. All Rights Reserved.
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
