Update assignment headings in index.html files for clarity

--- a/a15/index.html
+++ b/a15/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Assignment-15: Using spread operator</h1>
+    <h1>Using spread operator</h1>
 </body>
 </html>
