--- a/a14/index.html
+++ b/a14/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Assignment-14: Fetching an API</h1>
+    <h1>Fetching an API</h1>
 </body>
 </html>
