--- a/a16/index.html
+++ b/a16/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Assignment-16: Short circuiting</h1>
+    <h1>Short circuiting</h1>
 </body>
 </html>
