--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <p>My Projects</p>
 <ol>
     <li><a href="p1">Portfolio</a></li>
+    <li><a href="https://react-lessons-opal.vercel.app/">React Lesson</a></li>
 </ol>
 <hr>
 <p>Assignments</p>
