Add Mongo-Queries link to projects section in index.html

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <ol>
     <li><a href="p1">Portfolio</a></li>
     <li><a href="https://react-lessons-opal.vercel.app/">React Lesson</a></li>
+    <li><a href="https://github.com/Jay-7374/mongo-queries" target="_blank">Mongo-Queries</a></li>
 </ol>
 <hr>
 <p>Assignments</p>
