Refactor code structure for improved readability and maintainability

--- a/p1/index.html
+++ b/p1/index.html
@@ -94,6 +94,15 @@
             <a href="https://github.com/Jay-7374/Jay-7374.github.io/tree/main/Bank-ATM" target="_blank">
   <button class="code-button">View Code</button></a>
         </div>
+
+         <div class="project-card">
+            <h3>My Online Shop</h3>
+            <img src="images/demo4.png" alt="Project-4 Preview" class="project-image">
+            <p>A simple React app for user registration with name, email, and password. Registered users are listed, and after signup, users are redirected to login.</p>
+            <button class="demo-button" onclick="window.location.href='https://gcet-react-app-ecru.vercel.app/'">View Demo</button>
+            <a href="https://github.com/Jay-7374/Gcet-React-App" target="_blank">
+  <button class="code-button">View Code</button></a>
+        </div>
     </div>
 </section>
 
