Add target="_blank" to project links for improved user experience

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
 <p>My Projects</p>
 <ol>
     <li><a href="p1">Portfolio</a></li>
-    <li><a href="https://react-lessons-opal.vercel.app/">React Lesson</a></li>
+    <li><a href="https://react-lessons-opal.vercel.app/" target="_blank">React Lesson</a></li>
     <li><a href="https://github.com/Jay-7374/mongo-queries" target="_blank">Mongo-Queries</a></li>
+    <li><a href="https://gcet-node-app-sigma.vercel.app/" target="_blank">NodeJS</a></li>
 </ol>
 <hr>
 <p>Assignments</p>
